Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4590

running amqp 1.0 without management causes crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.20
    • 0.21
    • C++ Broker
    • None
    • proton 0.3
      C++ broker running with the amqp.so module loaded

    Description

      run a broker
      qpidd -m 0

      Connect with qpid-receive using amqp1.0:

      qpid-receive -a foo --connection

      {protocol:amqp1.0}

      The broker crashes during connections establishment:
      qpidd: /usr/include/boost/smart_ptr/shared_ptr.hpp:424: T* boost::shared_ptr<T>::operator->() const [with T = qmf::org::apache::qpid::broker::Connection]: Assertion `px != 0' failed.
      Aborted (core dumped)

      The stacktrace is: (omitted irrelevant top and bottom of stack trace for brevity)

      #5 0x00007ffff6bf0666 in qpid::broker::amqp::ManagedConnection::setSaslMechanism (this=0x701100, mechanism="ANONYMOUS")
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/broker/amqp/ManagedConnection.cpp:68
      #6 0x00007ffff6c01830 in qpid::broker::amqp::Sasl::init (this=0x7010a0,
      mechanism="ANONYMOUS", response=0x7fffffffa710)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/broker/amqp/Sasl.cpp:128
      #7 0x00007ffff75d5afd in qpid::amqp::(anonymous namespace)::SaslInitReader::onString (this=0x7fffffffa6f0, h=...)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/SaslServer.cpp:125
      #8 0x00007ffff75bf7ff in qpid::amqp::Decoder::readValue (this=0x7fffffffa750,
      reader=..., code=161 '\241', descriptor=0x0)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:253
      #9 0x00007ffff75bf0fa in qpid::amqp::Decoder::readOne (this=0x7fffffffa750,
      reader=...)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:173
      #10 0x00007ffff75bf025 in qpid::amqp::Decoder::read (this=0x7fffffffa750,
      reader=...)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:164
      #11 0x00007ffff75d623c in qpid::amqp::SaslServer::onStartList (this=0x7010a8,
      count=3, arguments=..., descriptor=0x7fffffffb1e8)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/SaslServer.cpp:170
      #12 0x00007ffff75bfd92 in qpid::amqp::Decoder::readList (this=0x7fffffffb270,
      reader=..., size=39, count=3, descriptor=0x7fffffffb1e8)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:336
      #13 0x00007ffff75bfbb2 in qpid::amqp::Decoder::readList32 (
      this=0x7fffffffb270, reader=..., descriptor=0x7fffffffb1e8)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:30--Type <return> to continue, or q <return> to quit--
      3
      #14 0x00007ffff75bfa22 in qpid::amqp::Decoder::readValue (this=0x7fffffffb270,
      reader=..., code=208 '\320', descriptor=0x7fffffffb1e8)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:273
      #15 0x00007ffff75bf0fa in qpid::amqp::Decoder::readOne (this=0x7fffffffb270,
      reader=...)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:173
      #16 0x00007ffff75bf025 in qpid::amqp::Decoder::read (this=0x7fffffffb270,
      reader=...)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Decoder.cpp:164
      #17 0x00007ffff75d2082 in qpid::amqp::Sasl::read (this=0x7010a8,
      data=0x7ffff1661010 "", available=59)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/amqp/Sasl.cpp:86
      #18 0x00007ffff6c00efb in qpid::broker::amqp::Sasl::decode (this=0x7010a0,
      buffer=0x7ffff1661010 "", size=59)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/broker/amqp/Sasl.cpp:51
      #19 0x00007ffff75ab2f4 in qpid::sys::AsynchIOHandler::readbuff (
      this=0x7fffdc000b00, buff=0x7fffdc001930)
      at /home/andrew/Work/qpid/src-released/qpid/cpp/src/qpid/sys/AsynchIOHandler.cpp:125

      Attachments

        Activity

          People

            gsim Gordon Sim
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: