QPID-4590: check management object exists before using it

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1455484 13f79535-47bb-0310-9956-ffa450edef68